# rnd-ml

./: .gitignore  MEMO.md  NEXT.md  README.md  diag_plateau.py  exit_loop.py  k4_probe.py  ladder_benchmark.py  ladder_curriculum.py  ladder_decompose.py  ladder_gp.py  ladder_mcts.py  ladder_policy.py  ladder_search.py  ladder_sim.py  ladder_simplify.py  main.py  plot_timechart.py  pyproject.toml  render_ladder.py  show_circuits.py  smoke_test.py  tchain_probe.py  temp_sweep.py  theory.html  unified_probe.py
data/: builder_motifs.json
docs/: MEMO.md  NEXT.md
experiments/: abstract_demo.py  cpuct_sweep.py  diag_open_ood.py  diag_rank_ood.py  diag_y3_body.py  exit_loop.py  il_actuator_probe.py  k4_probe.py  motif_catalog.py  motif_discover.py  motif_generalize.py  tchain_probe.py  temp_sweep.py  unified_motif_probe.py  unified_probe.py
ladder/: __init__.py  abstract.py  benchmark.py  curriculum.py  decompose.py  gp.py  il_parse.py  mcts.py  metrics.py  parallel.py  policy.py  render.py  search.py  sim.py  simplify.py
metrics/: history.jsonl
tools/: bench_inference.py  diag_plateau.py  dump_builder_il.py  plot_metrics.py  plot_timechart.py  show_circuits.py  test_parallel.py
